fix overflow issue, cleanup code

--- a/frontend/src/app/utils/mixins.scss
+++ b/frontend/src/app/utils/mixins.scss
@@ -40,20 +40,6 @@
     @include position(relative, $args);
 }
 
-$breakpoints: ('small': (min-width: 320px), 'medium': (min-width: 768px), 'large': (min-width: 1440px));
-
-@mixin respond-to($breakpoint) {
-    $raw-query: map-get($breakpoints, $breakpoint);
-    @if $raw-query {
-        $query: if(type-of($raw-query) == 'string', unquote($raw-query), inspect($raw-query)) ;
-        @media #{$query}{
-            @content
-        }
-    } @else {
-        @error 'No value found for `#{$breakpoint}`. ';
-    }
-}
-
 @mixin prefix($property, $value, $vendors: webkit moz ms o) {
     @if $vendors {
         @each $vendor in $vendors {
